--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,14 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#667399"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <android.support.v7.widget.RecyclerView
@@ -22,10 +23,9 @@
         style="@style/Base.TextAppearance.AppCompat.Title"
         android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:layout_alignBottom="@+id/rv"
         android:background="#c8c8c8"
         android:onClick="showMap"
-        android:text="See in map"
+        android:text="@string/see_in_map"
         android:textAlignment="center"
         android:textSize="20sp"/>
-</RelativeLayout>
+</LinearLayout>
